# tool-alchemist-mcp

./: README.md  pyproject.toml
src/tool_alchemist_mcp/: __init__.py  alchemist.py  server.py
src/tool_alchemist_mcp/templates/: init.py.j2  tool.py.jinja
tests/: test_alchemist.py
