[project]
name = "tool-alchemist-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Floth", email = "flothjldev@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.1",
]

[project.scripts]
tool-alchemist-mcp = "tool_alchemist_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
